@@ -2,6 +2,8 @@ package com.jenetics.smocker.util.network;
 
 import java.net.InetAddress;
 import javax.xml.bind.DatatypeConverter;
+
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,15 +15,17 @@ import com.jenetics.smocker.util.TransformerUtility;
 
 public class RestClientSmocker extends RESTClient {
 
-	//private static final String CONNECTIONS = "connections";
 	private static final String SMOCKER_REST_PATH = "/smocker/rest";
 	private static final String SMOCKER_JAVAAPP_PATH = "/javaapplications";
 	private static final String SMOCKER_ADDCONN = "/manageJavaApplication/addConnection";
 	private static final String SMOCKER_ADDCOMM = "/manageJavaApplication/addCommunication";
 	private static final String SMOCKER_GETMOCKEDCONN = "/connectionsMocked";
-	
+	private static final String SMOCKER_GET_LIST_MOCKED_HOST= "/mocks/listHostActivated";
+	private static final String SMOCKER_CHECK_MATCH = "/mocks/checkMatch";
+	private static final String SMOCKER_ALIVE= "/alive";
+	//"http://admin:admin@localhost:9990/management/deployment/smocker-1.0-SNAPSHOT.war?operation=attribute&name=status"
 	private static RestClientSmocker instance;
-	
+
 	public static synchronized RestClientSmocker getInstance() {
 		if (instance == null) {
 			instance = new RestClientSmocker();
@@ -32,41 +36,55 @@ public class RestClientSmocker extends RESTClient {
 	private RestClientSmocker() {
 		super(SystemPropertyConfiguration.getTargetHost(), 
 				SystemPropertyConfiguration.getTargetPort());
+
 	}
-	
+
 	public String getAll() {
-		setPath(SMOCKER_REST_PATH + SMOCKER_JAVAAPP_PATH);
-		return get();
+		return get(SMOCKER_REST_PATH + SMOCKER_JAVAAPP_PATH);
 	}
-	
+
+	public String getAllMockedConnection() {
+		return get(SMOCKER_REST_PATH + SMOCKER_GET_LIST_MOCKED_HOST);
+	}
+
 	public String getMockedConnections() {
-		setPath(SMOCKER_REST_PATH + SMOCKER_GETMOCKEDCONN);
-		return get();
+		return get(SMOCKER_REST_PATH + SMOCKER_GETMOCKEDCONN);
 	}
-	
+
+	public boolean checkAlive() {
+		String resp = get(SMOCKER_REST_PATH + SMOCKER_ALIVE);
+		String value = ResponseReader.readValueFromResponse(resp, "response");
+		return Boolean.parseBoolean(value);
+	}
+
 	public String postConnection(SmockerContainer smockerContainer, Long javaAppId) {
 		StringBuffer buffer = new StringBuffer();
 		Map<String, String> headers = buildHeader();
 		buffer.append("{\"id\": 0, \"version\": 0,  \"host\": \"")
-			.append(smockerContainer.getHost())
-			.append("\",  \"port\":")
-			.append(smockerContainer.getPort())
-			.append("}");
-		setPath(SMOCKER_REST_PATH + SMOCKER_ADDCONN + "/" + javaAppId);
+		.append(smockerContainer.getHost())
+		.append("\",  \"port\":")
+		.append(smockerContainer.getPort())
+		.append("}");
+		String path = SMOCKER_REST_PATH + SMOCKER_ADDCONN + "/" + javaAppId;
 		try {
-			return post(buffer.toString(), headers, PUT);
+			return put(buffer.toString(), path, null);
 		} catch (Exception e) {
 			MessageLogger.logThrowable(e);
 		}
 		return null;
 	}
-	
+
+
+	//	public boolean checkRemoteAppReady() {
+	//		getAdmin("")
+	//	}
+
 
 	public String postCommunication(SmockerContainer smockerContainer, Long javaAppId, Long connectionId) {
-		
+
 		String host = smockerContainer.getHost();
 		int port = smockerContainer.getPort();
-		
+
 		if (!MemoryConfiguration.isConnecctionThere(host, port)) {
 			MemoryConfiguration.setConnecctionWatched(host, port);	
 		}
@@ -89,18 +107,36 @@ public class RestClientSmocker extends RESTClient {
 					.append("\",  \"callerStack\":\"")
 					.append(encode(smockerContainer.getStackTrace()))
 					.append("\"}");
-					setPath(SMOCKER_REST_PATH + SMOCKER_ADDCOMM + "/" + javaAppId + "/" + connectionId);
-					return post(buffer.toString(), headers, PUT);
+					String path = SMOCKER_REST_PATH + SMOCKER_ADDCOMM + "/" + javaAppId + "/" + connectionId;
+					return put(buffer.toString(), path, headers);
 				} catch (Exception e) {
 					MessageLogger.logThrowable(e);
 				}
 		}
 		return null;
 	}
-	
 
-	private Object encode(String source) {
-		return DatatypeConverter.printBase64Binary(source.getBytes());
+
+	public static String encode(String source) {
+		return Base64.getEncoder().encodeToString(source.getBytes());
+	}
+	
+	public static String decode(String source) {
+		return new String(Base64.getDecoder().decode(source));
+	}
+
+	public String postCheckMatch(String content, String host) {
+		StringBuffer buffer = new StringBuffer();
+		Map<String, String> headers = buildHeader();
+		buffer.append("{\"request\": \"" + encode(content) + "\",")
+		.append("\"host\":\"" + host ).append("\"}");
+		String path = SMOCKER_REST_PATH + SMOCKER_CHECK_MATCH;
+		try {
+			return post(buffer.toString(), path, headers);
+		} catch (Exception e) {
+			MessageLogger.logErrorWithMessage("Unable to communicate with target host", e, getClass());
+		}
+		return null;
 	}
 
 	public String postJavaApp(SmockerContainer smockerContainer) {
@@ -115,20 +151,19 @@ public class RestClientSmocker extends RESTClient {
 			MessageLogger.logErrorWithMessage("Unable to get current host", e, getClass());
 			return null;
 		}
-		
+
 		buffer.append("{\"id\": 0, \"version\": 0,  \"classQualifiedName\": \"")
-			.append(TransformerUtility.getCallerApp())
-			.append("\",  \"sourceHost\":\"")
-			.append(host)
-			.append("\",  \"sourceIp\":\"")
-			.append(ip)
-			.append("\",  \"sourcePort\":\"")
-			.append(SystemPropertyConfiguration.getCommPort())
-			.append("\"}");
-		setPath(SMOCKER_REST_PATH + SMOCKER_JAVAAPP_PATH);
-		
+		.append(TransformerUtility.getCallerApp())
+		.append("\",  \"sourceHost\":\"")
+		.append(host)
+		.append("\",  \"sourceIp\":\"")
+		.append(ip)
+		.append("\",  \"sourcePort\":\"")
+		.append(SystemPropertyConfiguration.getCommPort())
+		.append("\"}");
+		String path = SMOCKER_REST_PATH + SMOCKER_JAVAAPP_PATH;
 		try {
-			return post(buffer.toString(), headers, POST);
+			return post(buffer.toString(), path, headers);
 		} catch (Exception e) {
 			MessageLogger.logErrorWithMessage("Unable to communicate with target host", e, getClass());
 		}
@@ -137,7 +172,7 @@ public class RestClientSmocker extends RESTClient {
 
 	private Map<String, String> buildHeader() {
 		Map<String,String> headers = new HashMap<String,String>();
-		headers.put("Content-Type", "application/json");
+		//headers.put("Content-Type", "application/json");
 		return headers;
 	}
 
